--- a/views/home.hbs
+++ b/views/home.hbs
@@ -4,6 +4,7 @@
 	<title>{{getTitle url}}</title>
 </head>
 <body>
+	{{> header}}
 	<p>Title {{getTitle url}}</p>
 	<p>Method {{method}}</p>
 	<p>Url {{url}}</p>
